--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -31,7 +31,7 @@
     "Reset Password": "Modificar Senha",
     "This is a secure area of the application. Please confirm your password before continuing.": "Essa é uma área segura da aplicação. Por favor confirme sua senha antes de continuar.",
     "You are receiving this email because we received a password reset request for your account.": "Você está recebendo este e-mail porque recebemos uma solicitação de redefinição de senha para sua conta.",
-    "If you did not request a password reset, no further action is required.": "Se você não solicitou a redefinição de senha, nenhuma ação adicional será necessária.",
+    "If you did not request a password reset, no further action is required ACA VOOY AGRGANDO.": "Se você não solicitou a redefinição de senha, nenhuma ação adicional será necessária.",
     "This password reset link will expire in :count minutes.": "Este link de redefinição de senha expirará em :count minutos.",
     "Please confirm your password before continuing.": "Por favor, confirme sua senha para continuar.",
     "Hello!": "Olá!",
